# orderlib

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  sonar-project.properties
app/: main.py
k8s/: deployment.yaml  namespace.yaml  service.yaml
performance/: locustfile.py
tests/: test_functional.py  test_unit.py
